--- a/css/common.css
+++ b/css/common.css
@@ -230,10 +230,100 @@ nav ul li:nth-child(3):hover {
   opacity: 0.7;
   transition: 0.3s;
 }
-nav ul li:nth-child(4):hover {
+/* nav ul li:nth-child(4):hover {
   opacity: 0.7;
   transition: 0.3s;
+} */
+
+
+
+
+
+
+
+
+
+#menu_head {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  height: 50px;
+  padding: 0 20px;
+  /* position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2; */
+  box-sizing: border-box;
 }
+.menu-trigger {
+  display: inline-block;
+  position: relative;
+  width: 36px;
+  height: 28px;
+  vertical-align: middle;
+  cursor: pointer;
+}
+.menu-trigger span {
+  display: inline-block;
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: rgb(255, 255, 255);
+  transition: all .5s .2s;
+  z-index: 2;
+}
+.menu-trigger.active span {
+  background-color: #fff;
+}
+.menu-trigger span:nth-of-type(1) {
+  top: 0;
+}
+.menu-trigger.active span:nth-of-type(1) {
+  transform: translateY(12px) rotate(-45deg);
+}
+.menu-trigger span:nth-of-type(2) {
+  top: 12px;
+}
+.menu-trigger.active span:nth-of-type(2) {
+  opacity: 0;
+}
+.menu-trigger span:nth-of-type(3) {
+  bottom: 0;
+}
+.menu-trigger.active span:nth-of-type(3) {
+  transform: translateY(-12px) rotate(45deg);
+}
+#menu_nav {
+  height: 40%;
+  width: 100%;
+  background-color: rgba(54, 54, 54, 0.925);
+  color: #fff;
+  text-align: center;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+#menu_nav ul {
+  /* padding: 100px 40px; */
+}
+#menu_nav ul li {
+  /* padding: 15px; */
+}
+
+
+
+
+
+
+
+
+
 .gnav-item img {
   width: 26px;
   height: 26px;
