--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,10 @@
 @charset "utf-8";
+
+@import url('https://fonts.googleapis.com/css?family=Sawarabi+Mincho');
+ body {
+   font-family: 'Sawarabi Mincho', sans-serif;
+  }
+
 /*
 =======================================
 	Reset CSS
@@ -200,10 +206,12 @@ p.gotop a{
 	Base Layout
 =========================================
 */
+
+/* ナビの設定 */
 #gnav {
   padding: 0;
   margin: 0;
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(34, 34, 34);
 }
 nav ul {
   display: flex;
@@ -221,27 +229,15 @@ nav ul li a:hover:nth-child(1) {
   color: grey;
 }
 nav ul li a:hover:nth-child(3) {
-  background-color: rgb(19, 19, 19);
+  background-color: rgb(34, 34, 34);
 }
 nav ul li a:hover:nth-child(4) {
-  background-color: rgb(19, 19, 19);
+  background-color: rgb(34, 34, 34);
 }
 nav ul li:nth-child(3):hover {
   opacity: 0.7;
   transition: 0.3s;
 }
-/* nav ul li:nth-child(4):hover {
-  opacity: 0.7;
-  transition: 0.3s;
-} */
-
-
-
-
-
-
-
-
 
 #menu_head {
   width: 100%;
@@ -315,15 +311,6 @@ nav ul li:nth-child(3):hover {
 #menu_nav ul li {
   /* padding: 15px; */
 }
-
-
-
-
-
-
-
-
-
 .gnav-item img {
   width: 26px;
   height: 26px;
@@ -332,19 +319,21 @@ nav ul li:nth-child(3):hover {
   font-size: 20px;
 }
 .item2 {
-  background-color: rgb(19, 19, 19);
+  background-color: rgb(34, 34, 34);
   flex-grow: 1;
 }
+
 
 /* wrap, コンテンツ部全体 */
 .contents{
   position: relative;
 }
+
+
 /* header,TOP画 */
 header {
-  background-color: rgb(19, 19, 19);
+  background-color: rgb(34, 34, 34);
 }
-
 .top_visual {
   padding: 0 0 4% 0;
 }
