--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,8 @@
 @charset "utf-8";
-
-@import url('https://fonts.googleapis.com/css?family=Sawarabi+Mincho');
- body {
-   font-family: 'Sawarabi Mincho', sans-serif;
-  }
+@import url("https://fonts.googleapis.com/css?family=Sawarabi+Mincho");
+body {
+  font-family: "Noto Sans JP", sans-serif;
+}
 
 /*
 =======================================
@@ -104,7 +103,6 @@ body {
   color: black;
   line-height: 1.5;
   font-size: 15px;
-  font-family: sans-serif;
 }
 img {
   border: 0;
@@ -131,10 +129,10 @@ a {
   transition: 0.5s;
   color: azure;
 }
-a:hover img {
+/* a:hover img {
   opacity: 0.7;
   transition: 0.6s;
-}
+} */
 .six {
   text-align: center;
   padding: 5%;
@@ -161,14 +159,14 @@ a:hover img {
 
 #button-4:before,
 #button-4:after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 0;
   left: 0;
   top: 50%;
   z-index: -1;
-  background-color:navy;
+  background-color: navy;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -192,13 +190,13 @@ a:hover img {
 }
 
 /* ページの上部に戻るボタン */
-p.gotop{
-    position: fixed;
+p.gotop {
+  position: fixed;
   right: 2%;
-  top:65%;
+  top: 65%;
 }
-p.gotop a{
-    display: block;
+p.gotop a {
+  display: block;
 }
 
 /*
@@ -231,14 +229,10 @@ nav ul li a:hover:nth-child(1) {
 nav ul li a:hover:nth-child(3) {
   background-color: rgb(34, 34, 34);
 }
-nav ul li a:hover:nth-child(4) {
-  background-color: rgb(34, 34, 34);
-}
 nav ul li:nth-child(3):hover {
   opacity: 0.7;
   transition: 0.3s;
 }
-
 #menu_head {
   width: 100%;
   display: flex;
@@ -253,6 +247,8 @@ nav ul li:nth-child(3):hover {
   z-index: 2; */
   box-sizing: border-box;
 }
+
+/* ハンバーガーメニューの中 */
 .menu-trigger {
   display: inline-block;
   position: relative;
@@ -269,7 +265,7 @@ nav ul li:nth-child(3):hover {
   width: 100%;
   height: 4px;
   background-color: rgb(255, 255, 255);
-  transition: all .5s .2s;
+  transition: all 0.5s 0.2s;
   z-index: 2;
 }
 .menu-trigger.active span {
@@ -294,22 +290,56 @@ nav ul li:nth-child(3):hover {
   transform: translateY(-12px) rotate(45deg);
 }
 #menu_nav {
-  height: 40%;
-  width: 100%;
-  background-color: rgba(54, 54, 54, 0.925);
+  height: 100%;
+  width: 40%;
+  background-color: rgb(54, 54, 54);
   color: #fff;
-  text-align: center;
   display: none;
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 1;
 }
-#menu_nav ul {
-  /* padding: 100px 40px; */
+.menu_nav-wrap{
+  text-align: left;
+}
+.menu_nav-wrap a{
+display: flex;
+} 
+.menu_nav-wrap a:hover{
+  transition: 0.3s;
+  opacity: 1;
+}
+#nav_main-menu{
+    padding:10% 35% 10% 10%;
+    font-size: 1.2em;
+    border-bottom: black 1px solid;
+}
+#nav_sub-menu{
+  font-size: 0.8em;
+  padding-left: 7%;
+  margin-top: 5%;
+}
+#nav_sub-menu li:nth-child(2){
+padding-left: 10%;
+}
+#sns_menu-list{
+  padding-left: 8%;
+  padding-top:5%;
+}
+/* #menu_nav ul {
+  padding: 5% 10%;
 }
 #menu_nav ul li {
-  /* padding: 15px; */
+  padding: 5%;
+} */
+.nav_sns-menu:hover {
+  opacity: 1;
+}
+.nav_sns-menu a:hover img {
+  border-radius: 50%;
+  transition: 0.23s;
+  opacity: 0.7;
 }
 .gnav-item img {
   width: 26px;
@@ -323,27 +353,24 @@ nav ul li:nth-child(3):hover {
   flex-grow: 1;
 }
 
-
 /* wrap, コンテンツ部全体 */
-.contents{
+.contents {
   position: relative;
 }
-
 
 /* header,TOP画 */
 header {
   background-color: rgb(34, 34, 34);
 }
 .top_visual {
-  padding: 0 0 4% 0;
+  padding: 0;
 }
-
 .top_visual img {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 95vh;
+  object-fit: cover;
 }
-
 #toptext {
   color: rgb(255, 255, 255);
   position: absolute;
@@ -362,7 +389,7 @@ header {
 }
 .title h2 {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 10%;
   color: rgb(255, 255, 255);
   font-size: 300%;
@@ -374,8 +401,8 @@ header {
 }
 h2 {
   text-align: center;
-  margin-bottom: 75px;
-  padding-top: 150px;
+  margin-bottom: 5%;
+  padding-top: 6%;
 }
 .menu-divst1 {
   margin: 0 5%;
@@ -390,8 +417,8 @@ h2 {
 }
 .main1-item a:hover {
   opacity: 1;
-  -webkit-animation: flash 1.5s;
-  animation: flash 1.5s;
+  -webkit-animation: flash 0.7s;
+  animation: flash 0.7s;
 }
 .main1-item a img {
   filter: gray;
@@ -421,7 +448,6 @@ h2 {
     opacity: 1;
   }
 }
-
 .menu-text {
   position: absolute;
   top: 20%;
@@ -434,7 +460,6 @@ h2 {
 }
 
 /* main2, コンテンツ部2 */
-
 .menu-divst2 {
   display: flex;
   flex-wrap: wrap;
@@ -453,14 +478,11 @@ h2 {
 .main2-item .menu-info {
   font-size: 120%;
 }
-
 figure {
   position: relative;
   overflow: hidden;
   width: 300px;
 }
-
-
 figcaption {
   position: absolute;
   bottom: -60px;
@@ -486,7 +508,6 @@ figure:hover figcaption {
   margin: 0 7% 0;
 }
 
-
 .menus {
   float: left;
 }
@@ -499,10 +520,8 @@ figure:hover figcaption {
   transition: 0s;
 }
 
-
 .foot__submenu-link-wrap {
   margin-top: 3.5%;
-  margin-left: 10%;
 }
 .foot__submenu-link {
   color: rgba(145, 145, 145, 0.705);
