--- a/css/common.css
+++ b/css/common.css
@@ -374,22 +374,25 @@ header {
 #toptext {
   color: rgb(255, 255, 255);
   position: absolute;
-  top: 20%;
+  top: 35%;
   left: 10%;
   font-family: serif;
   text-align: center;
-  font-size: 300%;
+  font-size: 450%;
+  font-family:'Sawarabi Mincho', sans-serif;
+
 }
 .title h1 {
+  font-family:'Sawarabi Mincho', sans-serif;
   position: absolute;
-  top: 35%;
+  top: 45%;
   left: 10%;
   color: rgb(255, 255, 255);
   font-size: 700%;
 }
 .title h2 {
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 10%;
   color: rgb(255, 255, 255);
   font-size: 300%;
