--- a/css/allgallery.css
+++ b/css/allgallery.css
@@ -8,6 +8,8 @@ header {
     line-height: 11px;
   }
 }
+
+/* おすすめ、人気、新着 */
 .head-lower__links-wrap {
   display: -webkit-box;
   display: -webkit-flex;
@@ -99,6 +101,8 @@ header {
     padding-left: 0;
   }
 }
+
+/* 検索系 */
 .head-lower__links-wrap.mypage,
 .head-lower__links-wrap.mypage .head-lower__links {
   background-color: #f5f5f5;
@@ -114,6 +118,8 @@ header {
   margin-left: 25px;
   padding-right: 40px;
 }
+
+/* キーワード検索フォーム */
 .head__discover-search {
   margin: auto 0;
   letter-spacing: -0.4em;
@@ -142,7 +148,7 @@ header {
 .head__discover-search-input-wrap .svg-search:hover {
   color: #e96e43;
 }
-.head__discover-search-input[type='search'] {
+.head__discover-search-input[type="search"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -158,7 +164,7 @@ header {
   line-height: 16px;
   letter-spacing: 0.05em;
 }
-.head__discover-search-input[type='search']:focus {
+.head__discover-search-input[type="search"]:focus {
   outline: 0;
   border-color: #e86537;
 }
@@ -186,7 +192,7 @@ header {
 .head__discover-search-cancel.active:hover .svg-cancel {
   color: #e96e43;
 }
-.head__discover-search-submit[type='submit'] {
+.head__discover-search-submit[type="submit"] {
   display: none;
 }
 .head__discover-cat-select-wrap {
@@ -194,9 +200,10 @@ header {
 }
 .head__discover-cat-select {
   width: 125px;
-  padding: 8px 25px 8px 10px;
-  background: #fff url('/images/ico_arw01.png') calc(100% - 9px) 50% no-repeat;
-  font-size: 13px;
+  padding: 8px 2px 8px 10px;
+  background: rgb(255, 255, 255) url("/img/icon/矢印アイコン\　下4\ \(1\).png")
+    calc(100% - 9px) 50% no-repeat;
+  font-size: 15px;
   line-height: 13px;
   cursor: pointer;
 }
@@ -221,28 +228,26 @@ header {
   -webkit-transition: ease-in 0.1s;
   transition: ease-in 0.1s;
 }
-.button-group button{
+.button-group button {
   width: 100%;
-margin: 1% 0;
-    /* 背景色を濃い青色に指定 */
-   background-color: rgb(255, 255, 255);
-    /* 文字色を白色に指定 */
-    color: rgb(0, 0, 0);
-   /* ボーダーをなくす */
-    border-style: none;
+  margin: 1% 0;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  /* ボーダーをなくす */
+  border-style: none;
 }
 
-.button-group button:hover{
+.button-group button:hover {
   transition: 0.5s;
   background-color: rgba(158, 158, 158, 0.582);
-  }
-  
+}
+
 @media (max-width: 1000px) {
   .head__discover-others-wrap {
     margin: 0;
     padding: 10px 15px;
   }
-  .head__discover-search-input[type='search'] {
+  .head__discover-search-input[type="search"] {
     font-size: 12px;
   }
   .head__discover-search-cancel {
@@ -259,9 +264,6 @@ margin: 1% 0;
     font-size: 12px;
   }
 }
-
-
-
 
 .head__discover-mobile-wrap {
   padding: 15px;
@@ -378,8 +380,32 @@ margin: 1% 0;
   text-align: center;
   cursor: pointer;
 }
-  .icon-svg_txt_search:before {
+.icon-svg_txt_search:before {
   content: url(../img/icon/検索フォーム.png);
+}
+
+/* ギャラリー一覧のデザイン */
+.item {
+  margin: 3% 1.5%;
+  /* -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -ms-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s; */
+}
+
+.gallery-info {
+  margin: 5% 0 2%;
+  font-size: 1.2rem;
+  letter-spacing: 0.065em;
+  font-weight: bold;
+  text-align: center;
+}
+.artist-name {
+  font-size: 0.8rem;
+  letter-spacing: 0.065em;
+  font-weight: bold;
+  text-align: center;
 }
 
 @media (max-width: 1000px) {
@@ -399,17 +425,10 @@ margin: 1% 0;
     font-size: 12px;
     line-height: 1.1;
   }
-
-  /* ギャラリー一覧のデザイン */
-
-  .item { width: 25%; }
-/*他と違う幅の要素を入れたい場合も、下記のように指定すればIsotopeが並べ変えてくれます*/
-.item.w2 { width: 150%; }
-
-
+}
 
 /* ウェーブ */
-  @media (max-width: 1000px) {
+@media (max-width: 1000px) {
   .lp__content-wrap .campaign-banner__wrap {
     padding-top: 30px;
   }
@@ -417,15 +436,18 @@ margin: 1% 0;
 .cmn__loader-wrap {
   position: relative;
 }
+/* ページの読み込みが終わると、奥へ引っ込む */
 .cmn__loader-wrap:before {
   position: absolute;
   bottom: 0;
   left: 0;
   z-index: -1;
   display: block;
-  content: '';
+  content: "";
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
 }
+
+/* ページの読み込み前は、うごめく */
 .cmn__loader-wrap .wavy-loader {
   display: none;
   opacity: 0;
@@ -446,6 +468,8 @@ margin: 1% 0;
   -webkit-transition: ease-out 0.2s;
   transition: ease-out 0.2s;
 }
+
+/* ウェーブの動きの挙動*/
 .cmn__loader-wrap .wavy-loader .loader {
   position: absolute;
   top: 50%;
@@ -457,6 +481,8 @@ margin: 1% 0;
   width: 40px;
   height: 24px;
 }
+
+/* ウェーブのデザイン*/
 .cmn__loader-wrap .wavy-loader .loader span,
 .cmn__loader-wrap .wavy-loader .loader:before,
 .cmn__loader-wrap .wavy-loader .loader:after {
@@ -470,18 +496,22 @@ margin: 1% 0;
 }
 .cmn__loader-wrap .wavy-loader .loader:before,
 .cmn__loader-wrap .wavy-loader .loader:after {
-  content: '';
+  content: "";
 }
+/*ウェーブひだり*/
 .cmn__loader-wrap .wavy-loader .loader:before {
   left: 0;
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
   -webkit-backface-visibility: hidden;
   -webkit-font-smoothing: antialiased;
-  -webkit-animation: wave 0.88s linear infinite;
+  　　/* ←　を指定すればフォントにエイリアスがかかってちょっとだけクールに */
+  -webkit-animation: wave
+    0.88s linear infinite;
   animation: wave 0.88s linear infinite;
 }
 .cmn__loader-wrap .wavy-loader .loader span {
+  　/*ウェーブまんなか*/
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -491,6 +521,7 @@ margin: 1% 0;
   animation: wave 0.93s linear infinite -0.6s;
 }
 .cmn__loader-wrap .wavy-loader .loader:after {
+  　/*ウェーブみぎ*/
   right: 0;
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
@@ -548,17 +579,12 @@ margin: 1% 0;
   }
 }
 
-
-
-
-
-
 [data-filter-view]:not([data-filter-view=""]) [data-filter-key] {
-    display: none;
+  display: none;
 }
 [data-filter-view][data-filter-view~="貝類"] [data-filter-key="貝類"],
 [data-filter-view][data-filter-view~="光物"] [data-filter-key="光物"],
 [data-filter-view][data-filter-view~="白身"] [data-filter-key="白身"],
 [data-filter-view][data-filter-view~="赤身"] [data-filter-key="赤身"] {
-    display: block;
-};
+  display: block;
+}
