--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -22,27 +22,33 @@ ul.bxslider {
   list-style: none;
 }
 
-
 .bx-viewport {
   /*fix other elements on the page moving (on Chrome)*/
-  
+
   -webkit-transform: translatez(0);
   background-color: rgb(19, 19, 19);
-  
 }
 /** THEME
 ===================================*/
 
-.bx-wrapper .bx-pager,
 .bx-wrapper .bx-controls-auto {
   position: absolute;
   bottom: -30px;
   width: 100%;
+  background-color: rgb(19, 19, 19);
 }
+.bx-wrapper .bx-pager {
+  position: absolute;
+  width: 100%;
+  background-color: rgba(19, 19, 19, 0);
+  bottom: 8px;
+}
+
+
 /* LOADER */
 .bx-wrapper .bx-loading {
   min-height: 50px;
-  background: url('images/bx_loader.gif') center center no-repeat #ffffff;
+  background: url("images/bx_loader.gif") center center no-repeat #ffffff;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -53,11 +59,11 @@ ul.bxslider {
 /* PAGER */
 .bx-wrapper .bx-pager {
   text-align: center;
-  font-size: .85em;
+  font-size: 0.85em;
   font-family: Arial;
   font-weight: bold;
   color: #666;
-  padding-top: 20px;
+  /* padding-top: 20px; */
 }
 .bx-wrapper .bx-pager.bx-default-pager a {
   background: #666;
@@ -87,22 +93,28 @@ ul.bxslider {
   font-size: 0;
   line-height: 0;
 }
+
 /* DIRECTION CONTROLS (NEXT / PREV) */
 .bx-wrapper .bx-prev {
   left: 10px;
-  background: url('../images/controls.png') no-repeat 0 -32px;
+  background: url("../images/controls.png") no-repeat 0 -32px;
 }
 .bx-wrapper .bx-prev:hover,
 .bx-wrapper .bx-prev:focus {
-  background-position: 0 0;
+  /* background-position: 0 0; */
+  transition: 0s;
+  opacity: 0.7;
 }
+
 .bx-wrapper .bx-next {
   right: 10px;
-  background: url('../images/controls.png') no-repeat -43px -32px;
+  background: url("../images/controls.png") no-repeat -43px -32px;
 }
 .bx-wrapper .bx-next:hover,
 .bx-wrapper .bx-next:focus {
-  background-position: -43px 0;
+  /* background-position: -43px 0; */
+  transition: 0s;
+  opacity: 0.7;
 }
 .bx-wrapper .bx-controls-direction a {
   position: absolute;
@@ -118,7 +130,7 @@ ul.bxslider {
   display: none;
 }
 /* AUTO CONTROLS (START / STOP) */
-.bx-wrapper .bx-controls-auto {
+/* .bx-wrapper .bx-controls-auto {
   text-align: center;
 }
 .bx-wrapper .bx-controls-auto .bx-start {
@@ -148,7 +160,7 @@ ul.bxslider {
 .bx-wrapper .bx-controls-auto .bx-stop.active,
 .bx-wrapper .bx-controls-auto .bx-stop:focus {
   background-position: -86px -33px;
-}
+} */
 /* PAGER WITH AUTO-CONTROLS HYBRID LAYOUT */
 .bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
   text-align: left;
@@ -171,6 +183,6 @@ ul.bxslider {
   color: #fff;
   font-family: Arial;
   display: block;
-  font-size: .85em;
+  font-size: 0.85em;
   padding: 10px;
 }
