--- a/css/exhibitions_page.css
+++ b/css/exhibitions_page.css
@@ -25,14 +25,6 @@ header {
 
 
 
-
-
-
-
-
-
-
-
 /* main1(展示情報), コンテンツ部1 */
 #main1{
   background-color: rgb(250, 249, 249);
@@ -360,85 +352,6 @@ margin-left: 30px;
 
 
 /* SNS共有メニューについて */
-/* drop down
------------------------------------------*/
-/* link */
-/* .mod_dropnavi ul li a{
-  transition-property: border;
-  transition-duration: 0.5s;
-  transition-timing-function: ease;
-  transition-delay: 0s;
-}
-.mod_dropnavi ul li a:link    {text-decoration:none;}
-.mod_dropnavi ul li a:visited {text-decoration:none;}
-.mod_dropnavi ul li a:hover   {text-decoration:none;}
-.mod_dropnavi ul li a:active  {text-decoration:none;}
- 
-/* mod_dropnavi */
-/*
-.mod_dropnavi>ul{
-    width:920px;
-    height:45px;
-  border-bottom:solid 3px #003700;
-    background-color:#336600;
-}
-.mod_dropnavi>ul>li{
-    width:150px;
-    float:left;
-    position:relative;
-    text-align:center;
-    line-height:45px;
-    border-right:solid 1px #003700;
-}
-.mod_dropnavi>ul>li>a{
-    display:block;
-    color:#FFFFFF;
-    font-weight:bold;
-  border-bottom:solid 3px #003700;
-}
-.mod_dropnavi>ul>li>a:hover   {border-bottom:solid 3px #336600;}
-.mod_dropnavi>ul>li>a:active  {border-bottom:solid 3px #336600;}
- 
-/* mod_dropnavi_child */
-/*
-.mod_dropnavi .mod_dropnavi_child{
-  display:none;
-  position:absolute;
-  top: 262px;
-  z-index: 69;
-  max-width: 400px;
-  background: #fff;
-  border: solid 1px #d6d6d6;
-  border-radius: 5px;
-  -webkit-filter: drop-shadow(0 0 1px #d6d6d6);
-  filter: drop-shadow(0 0 1px #d6d6d6);
-  right: 774px;
-  width: 190px;
-  padding-top: 10px;
-  letter-spacing: 0.05em;
-}
-.mod_dropnavi .mod_dropnavi_child ul{
- padding:4px 27px 16px 27px!important;
- background-color:#ff006a;
-}
-.mod_dropnavi .mod_dropnavi_child ul li{
- font-size:90%;
- line-height:1.3;
- text-align:left;
- margin:12px 0 0 0!important;
- white-space:nowrap;
-}
-.mod_dropnavi .mod_dropnavi_child ul li a{
-  padding:0 0 0 12px!important;
-  display:inline-block;
-    background:transparent url('img/icon_arrow_02.png') no-repeat left 5px!important;
-}
-.mod_dropnavi .mod_dropnavi_child ul li a:link    {color:#FFF; text-decoration:none;}
-.mod_dropnavi .mod_dropnavi_child ul li a:visited {color:#FFF; text-decoration:none;}
-.mod_dropnavi .mod_dropnavi_child ul li a:hover   {color:#FFF; text-decoration:underline;}
-.mod_dropnavi .mod_dropnavi_child ul li a:active  {color:#FFF; text-decoration:underline;}
-
- */
  
 #shareDropdownBtn img{
   margin-top:55%;
@@ -584,7 +497,6 @@ margin-left: 30px;
 } 
 
 
-
 /* main2, コンテンツ部2 */
 .heading{
   margin: 7% 0;
@@ -600,7 +512,7 @@ padding: 2% 0 0 2%;
 }
 
 .item {
-  margin: 3% 1.5%;
+  margin: 3% 0 0 5.5%;;
 }
 
 .gallery-info {
