--- a/css/common.css
+++ b/css/common.css
@@ -454,8 +454,8 @@ header {
 
 @media (max-width: 620px) {
   .top_visual img {
-    width: 100vw;
-    height: 70vh;
+    width: auto;
+    height: 67vh;
   }
   #toptext {
     top: 23%;
